--- a/src/css/common.css
+++ b/src/css/common.css
@@ -21,3 +21,26 @@
     max-height: 200px;
     object-fit: cover;
 }
+
+.loader {
+    margin-top: 100px;
+    margin-left: 100px;
+    width: 100px;
+    height: 100px;
+    border: 5px solid #FFF;
+    border-bottom-color: #FF3D00;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
